--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,5 @@
 .git/
 
-build
-dist
-*.egg-info
-*.egg/
 *.pyc
-*.swp
-
-.tox
-.coverage
-html/*
 __pycache__
-
-# Compiled Documentation
-docs/_build
+**/__pycache__
